--- a/self_introduction/KT/지원동기.md
+++ b/self_introduction/KT/지원동기.md
@@ -1,2 +1,7 @@
 ### KT 및 해당 직무에 지원한 동기와 KT 입사 후 해당 직무의 전문가로 성장하기 위해 어떠한 노력을 할지 구체적으로 기술해 주십시오. (최대 700자 입력가능)
 
+학부과정과 아르바이트를 통해 개발의 기초적인 지식을 습득하였고, 2번의 인턴을 통해 협업과 설계의 중요성을 깨달았습니다. 또한 블록체인 산업에 잠시나마 발 담그면서 향후 블록체인이 발전하여 지금의 웹이나 앱 처럼 Dapp이 만연하게 사용되는 세상을 꿈꾸기도 하였습니다. 이러한 경험을 발판삼아 향후 새로운 패러다임을 이끌어 가는 KT의 서비스를 제공하는데 발맞춰 나가고 싶습니다.
+
+블록체인 네트워크가 성장하기 위해서는 해당 네트워크가 빠르고 신뢰가 있어야 합니다. 또한 네트워크에서 제공하는 콘텐츠가 유용하여 많은 사람들이 찾아야 합니다. 저는 네트워크의 관리 뿐 아니라 네트워크를 사용하여 개발하는 입장에서도 항상 주의를 기울이며 어떤 서비스를 제공하여야 콘텐츠를 제작하는데 도움이 되는지 고민하겠습니다. 
+
+KT에서 유능한 인재들과 함께 서비스를 더욱 쉽게 제공하는데 앞장서고 싶습니다. KT의 블록체인 플랫폼에 기업체에서 쉽게 접근할 수 있는 서비스를 구현하여 더 많은 기업체 고객을 유치할 수 있게 노력하겠습니다. 블록체인의 코어를 이해하면서 최적화된 서비스를 제공하기 위해 끊임없이 발전해 나가겠습니다.
