--- a/self_introduction/KT/핵심역량.md
+++ b/self_introduction/KT/핵심역량.md
@@ -1,8 +1,9 @@
 ### 지원한 직무를 수행하기 위해 필요한 핵심역량은 무엇이라고 생각하며, 그 이유에 대해 설명해 주십시오. 또한 해당 역량을 갖추기 위해 본인이 어떤 노력을 하였는지 기술해 주십시오. (최대 800자 입력가능)
 
-제가 지원한 직무 소프트웨어 개발을 잘 하기 위해서는 선행되는 소프트웨어 설계가 가장 중요하다고 생각 합니다. 특히  SDLC에서의 '설계' 부분은 정확한 검토가 이루어 지지 않으면 후에 다시 설계 및 구현을 해야하는 경우가 있습니다. 일례로 JAVA Collection의 Date 모듈 같은 경우는 mutable하기 때문에 쓰레드 안전하지 못하고, 월 상수의 경우에는 0으로 시작하기 때문에 개발자에 혼동을 야기해 API Document없이는 제대로 사용하기 힘들게 설계 되어있었습니다. 그 때문에 JAVA 에서는 java8부터 LocalDate 등의 새로운 날짜 관련 API을 제공해 주기 시작 하였습니다.
+소프트웨어 직무를 잘 수행하기 위해서는 소프트웨어 설계가 가장 중요하다고 생각 합니다. 특히  SDLC에서의 '설계' 부분은 정확한 검토가 이루어 지지 않으면 후에 다시 설계 및 구현을 해야하는 경우가 있습니다. 가장 기본적인 설계 패러다임인 OOP만 하더라도 확장성, 코드중복 등을 고려하여 만들어 졌고, 관련된 표준을 따라 설계를 하게 된다면 커뮤니케이션을 단축시키면서 효율을 높일 수 있습니다.
 
-저는 이 때문에 설계단계부터 많은 노력을 기울여야 겠다고 판단 하여 소프트웨어 공학 설계, 소프트웨어 설계 과목을 이수 하였습니다. 그리고 배운 내용을 토대로 프로젝트를 진행하면서 적용 시키고자 노력하였습니다. 동아리에서 제작한 VR게임 에서는 설계시에 클래스 다이어 그램을 그려 가며 클래스 간의 API를 어떻게 정의 해야 할지를 고민 했고, 각각의 클래스가 하는 행동을 고려해 디자인 패턴을 적용 시켰습니다. 게임 하는 동안의 사용자의 정보를 관리하는 싱글톤 패턴의 클래스를 이용하여 게임내 여러 컴포넌트에서 사용자 데이터에 쉽게 접근 할 수 있으면서도 일관된 데이터를 제공 해 주고자 하였고, 게임 내 총알을 제작 할 때 빌더패턴을 사용하여 같이 개발하는 개발자가 컴포넌트를 생성하기에 용이하게 설계하였습니다.
+저는 이 때문에 설계단계부터 많은 노력을 기울여야 겠다고 판단 하여 소프트웨어 공학 설계, 소프트웨어 설계 과목을 이수 하였고 서적 등을 읽으며 실력을 쌓았습니다. 그리고 배운 내용을 토대로 프로젝트를 진행하면서 배운 내용을 최대한 내 것으로 만들고자 노력했습니다. 필요한 기능에 따라 디자인 패턴을 적용시켜 설계하였고, 정보은닉과 상속을 고려하여 필요한 정보만 API로 제공하는 등 세심한 부분까지 신경써가며 작업 했습니다.
 
-현재는 개발중인 프로젝트에서 코드리뷰를 받으며 더 나은 설계 및 개발 방법에 대해 배우고 있고, 다양한 서적을 읽으며 더 나은 설계를 위해 공부하고 있습니다.
+인턴과정을 통해서는 소프트웨어 설계에 대한 시각을 넓힐 수 있었습니다. 회사에서 제공하는 API의 구성이 달라지면서 JAVA SDK를 수정해야 했는데,  프로그램의 유지보수 측면에서 깊은 고민을 해야 했고, 바뀌는 기능에 대해서는 하위호환에 신경을 써 가면서 코드를 작성했습니다.
 
+설계를 하면서 각 기능을 정의 하는 것 뿐 아니라 예외처리 또한 정의하여 프로그램에서 발생하는 많은 오류를 보다 쉽게 찾을 수 있게 하였습니다. 또한 테스트를 미리 정의, 설계하고 자동화 하여 프로그램을 구현할 때에 시간을 들여 검사하는 과정없이 필요한 기능이 정상 작동하는 지 확인 할 수 있었습니다. 
