--- a/self_introduction/NAVER/어려운기술 경험.md
+++ b/self_introduction/NAVER/어려운기술 경험.md
@@ -1,25 +1,11 @@
 ### 어려운 기술적 문제를 해결한 경험을 구체적으로 이야기 해주세요. (학교수업/프로젝트/경진대회/대외활동 등)
 
-부모님께서 노상주차장을 운영하셔서 운영하시기 편하도록 안드로이드 어플리케이션을 제작하여 사용할 수 있게 해 드렸습니다. 
+ 부모님이 주차장을 운영하시게 되어 도와드린 경험이 있습니다. 노상주차장 이었기에 기기에 차 번호를 직접 입력하여 등록한 후, 주차 비용을 정산 하는 방식으로 운영하고 계셨는데, 기기가 1대 밖에 없고, 네트워크 기능이없다보니 정산하는데 오랜 시간이 걸렸고, 때문에 차가 많아지면 운영에 차질이 생기기 일쑤였습니다. 때문에 서버에 저장이 가능한 주차 관리 앱을 만들면 좋겠다 라는 생각을 했고, 이내 프로젝트를 진행하기 위해 설계를 하기 시작했습니다. 
 
-해당 앱을 이용하여 운영하시던 도중, 앱이 갑자기 꺼지는 현상이 발생하였고 원인을 알고보니 파이어베이스 서버의 특정 경로에서 데이터를 받아오는데 (예를들어 1234번 차라면 /PARKINGLOT/CARS/1234/), 서버의 경로에 잘못된 정보가 입력되어 있었습니다.
+서버와 정보를 주고받기 위한 API를 작성하였고, 어플리케이션에 필요한 기능을 정하여 스토리보드를 구성하였습니다. 진행 중  백엔드 서버에 대해서도 많은 고민이 있었습니다. 한 쪽에서 차량을 등록하게 되면 다른 쪽에서도 차량이 곧바로 등록 되어야 하는데 서버와 클라이언트가 계속 연결이 되어있던게 아니었기 때문에 방법을 찾기가 어려웠습니다. 하지만 곧 Google Firebase에서 제공하는 실시간 데이터베이스 서비스에 대해 알게 되었고, Firebase의 실시간 데이터베이스와 FireStore로 백엔드를 대체하여 백엔드를 구성하는데 드는 비용을 줄였습니다.
 
-원래 라면 ../CARS/CARNUMBER : { carNumber: ... , registerDate: ... } 의 데이터를 받아와야 했으나, 해당 데이터는 ../CARS : {carNumber: ..., registerDate: ...} 형식으로 되어있었고, 이유는 파이어베이스 서버에 값을 입력할 때, CARNUMBER가 공백이면 하위 모든 내용이 사라지고, 해당 dict로 교체되기 때문이었습니다.
-
-가장 먼저 떠오른 생각은 공백을 입력하는 경우가 없게 검사를 하는것이 어떨까 였지만, 코드상에서 서버에 값을 보내는 모든 경우에 공백 체크를 하기엔 무리가 있다고 판단하였고, 난수를 생성하여 해당 내용을 대체하려 하였으나, 후에 검색 할 때 모든 값을 불러와 일일이 찾아야 하였기 때문에 성능상 문제가 있다고 판단하였습니다.
-
-해당 객체로부터 값을 유추할 수 있으면서 공백이 생기지 않는 방법이 필요했는데, 해쉬값을 이용하여 이를 해결하였습니다.
-
-```java
-@Override
-    public int hashCode(){
-        int hash = carNumber.hashCode();
-        hash += registerTime.hashCode() * 31;
-
-        return hash;
-    }
-```
-
-서버에 등록하고자 하는 객체의 hashCode 값을 key로 두고, 객체를 value로 하여 서버에 업로드 하여서 해당 문제가 더이상 발생하지 않도록 하였습니다.
+ 어플리케이션을 운영하면서도 많은 버그가 있었습니다. 특히 자동차를 등록하는 API를 서버에 보낼 때, 자동차 번호를 json에서의 key로 등록했는데, 자동차 번호가 없이 API를 보내게 되면 해당 주차장 영역에 속하는 모든 데이터가 사라지는 버그가 발생하였습니다. 가장 먼저 떠오른 생각은 공백을 입력하는 경우가 없게 검사를 하는것이 어떨까 였지만, 코드상에서 서버에 값을 보내는 모든 경우에 공백 체크를 하기엔 무리가 있다고 판단하였고, 난수를 생성하여 해당 내용을 대체하려 하였으나, 후에 검색 할 때 모든 값을 불러와 일일이 찾아야 하였기 때문에 성능상 문제가 있다고 판단하였습니다. 해당 객체로부터 값을 유추할 수 있으면서 공백이 생기지 않는 방법이 필요했는데, 해쉬값을 이용하여 이를 해결하였습니다. 클라이언트에서는 빈 문자열로 API를 보낼 수 없도록 예외처리를 하였고, json에서의 Key를 자동차 번호가 아닌 자동차번호, 등록일자의 hash값으로 변경하여 빈 문자열이 들어갈 수 없도록 재 설계 하였습니다. 
 
 후에 찾아보니 파이어베이스 규칙 중 .validate 와 .indexOn을 이용해 해당 문제를 해결 할 수 있는 것을 발견하였고, 규칙 또한 적용하여 안정성을 높였습니다.
+
+ 해당 경험을 통해 예외케이스를 정의하고 처리하는 것이 중요하다는 것을 알게 되었고, 실제로 사용되는 프로그램을 제작하는 것은 더 세심한 구현과 테스트가 이루어 져야 한다는 것을 알게 되었습니다.
